[package]
name = "xrpl_async"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "manual_test"
test = true

[dependencies]
#base58check = "0.1.0" # BitCoin not XRPL format
#derive = "1.0.0"
derive_more = "0.99.17"
serde_json = "1.0.93"
lazy_static = "1.4.0"
async-trait = "0.1.64"
reqwest = { version = "0.11.14", features = ["json"] }
workflow-websocket = { version = "0.3.10", features = [] }
fragile = "2.0.0"
tokio-stream = "0.1.11"
hex = "0.4.3"
tokio = "1.25.0"
xrpl-rust = "0.1.1"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
