[package]
name = "xrpl_async_macroses"
version = "0.0.1"
edition = "2021"

[lib]
edition = "2021"
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "*", features = ["full"] }
quote = "*"
proc-macro2 = "1.0.51"
itertools = "0.10.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
lazy_static = "1.4.0"